feat: add serviceProviderId to api/user/me
